--- a/config.toml
+++ b/config.toml
@@ -8,7 +8,7 @@ disqusShortname = "edzynda"
 
 [params]
     site_author = "Ed Zynda"
-    site_description = "Coder, Hacker, Superhero"
+    site_description = "Coder | Hacker | Superhero"
     location = "Earth"
     # All paths are relative to the baseurl. Put your files
     # somewhere in the static folder.
