--- a/config.toml
+++ b/config.toml
@@ -29,6 +29,6 @@ disqusShortname = "edzynda"
     linkedin  = ""
     behance   = ""
     dribbble  = ""
-    instagram = "yungzee83"
+    instagram = "edzynda"
     github    = "ezynda3"
     gplus     = ""
