--- a/config.toml
+++ b/config.toml
@@ -6,6 +6,9 @@ paginate = 5
 # Enable comments powered by Disqus by entering your disqus shortname
 disqusShortname = "edzynda"
 
+[permalinks]
+ post = "/:title/"
+
 [params]
     site_author = "Ed Zynda"
     site_description = "Coder | Hacker | Superhero"
