Update SEO meta stuff

--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseurl = "http://edzynda.com/"
+baseurl = "http://www.edzynda.com/"
 languageCode = "en-us"
 title = "Ed Zynda - Coder, Hacker, Superhero"
 # Define how many pages appear per site
